# Halo

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build-out.txt  capture_lint.mjs  clean_lint.mjs  eslint.config.js  final_lint.txt  final_lint_utf8.txt  findings.md  fix_lint.mjs  fix_lint_2.mjs  fix_lint_3.mjs  fix_lint_4.mjs  fix_warnings.mjs  home_lint.txt  home_lint_utf8.txt  index.html  javac_log.txt  lint_output.txt  lint_output_final.txt  package.json  pnpm-lock.yaml  progress.md  task_plan.md  test_smtc.ps1  tsc-out.txt  tsc-out2.txt  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: CMS单仓样本.json  log_txt.md  所有源.txt  (+8 more)
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  replace.py  tauri.conf.json  tauri.minimal.conf.json
src-tauri/TVBox/: index.html  log.html
src-tauri/TVBox/css/: style.css  ui.css
src-tauri/TVBox/js/: deep.parse.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/jar/dex-tools/: dex-tools-2.4.26.pom
src-tauri/scripts/: build-compat-helper.ps1  sync_java_runtime.ps1
src-tauri/spider-bridge/: build_bridge.ps1  build_bridge_compat_runner.ps1  download_unidbg.ps1  download_unidbg_final.ps1  download_unidbg_fix.ps1  javac_log.txt  sources-manual.txt
src-tauri/src/: ai_management.rs  ai_music.rs  ai_music_v2.rs  bin_debug_smtc.rs  compat_helper.rs  db.rs  icon_extractor.rs  java_runtime.rs  lib.rs  main.rs  media_bootstrap.rs  media_cmds.rs  music.rs  music_control.rs  music_media_key.rs  music_play_stats.rs  music_process_probe.rs  music_qqmusic_cache.rs  music_settings.rs  native_player.rs  patch.py  settings.rs  shortcut_launcher.rs  spider_artifact_download.rs  spider_bridge_payload.rs  spider_cmds.rs  spider_cmds_dex.rs  spider_cmds_exec.rs  spider_cmds_profile.rs  spider_cmds_runtime.rs  spider_compat.rs  spider_daemon.rs  spider_diag.rs  spider_fast_paths.rs  spider_local_runtime_android.rs  spider_local_service.rs  spider_probe.rs  spider_proxy_bridge.rs  spider_response_contract.rs  spider_runtime_contract.rs  (+7 more)
src-tauri/src/media_cmds/: media_cmds_hls.rs  media_cmds_hls_manifest.rs  media_cmds_hls_tests.rs  media_cmds_jiexi.rs  media_cmds_network.rs  media_cmds_source_fallbacks.rs  media_cmds_stream_probe.rs  media_cmds_transport.rs  media_cmds_tvbox.rs
src-tauri/src/music_lyrics/: mod.rs  parser.rs  scoring.rs  types.rs
src-tauri/src/music_lyrics/providers/: kugou.rs  kuwo.rs  lrclib.rs  mod.rs  netease.rs  qqmusic.rs  qqmusic_cache.rs  qqmusic_qrc.rs  scrape.rs
src-tauri/src/spider_fast_paths/: app3q.rs  appqi.rs  ygp.rs
src-tauri/tauri-plugin-mpv-patch/: Cargo.toml  README.md  package.json
src-tauri/tauri-plugin-mpv-patch/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-mpv-patch/src/: commands.rs  desktop.rs  events.rs  ipc.rs  mobile.rs  models.rs  process.rs
(+529 files in other folders)
