[package]
name = "halo"
version = "0.3.117"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "halo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "halo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "full"] }
tokio-util = { version = "0.7", features = ["io"] }
dirs = "5"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
win-gsmtc = "0.1"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
log = "0.4"
env_logger = "0.11"
window-vibrancy = "0.7.1"
thiserror = "2.0.18"
windows = { version = "0.61.3", features = [
    "Media_Control",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_WinRT",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
] }
windows-future = "0.2.1"
tauri-plugin-fs = "2.4.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream", "json", "socks"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
axum = { version = "0.8.8", features = ["multipart"] }
bytes = "1.11.1"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
md5 = "0.7"
encoding_rs = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
hickory-resolver = { version = "0.25.2", features = ["https-ring", "webpki-roots"] }
tauri-plugin-mpv = { git = "https://github.com/nini22P/tauri-plugin-mpv", branch = "main" }
tauri-plugin-libmpv = "0.3.2"
indexmap = "2"
flate2 = "1"
